# tpm-rs-preview-snapshot

./: .gitignore  Cargo.toml
src/: index_permutation.rs  interface.rs  leases.rs  lib.rs  session.rs  sessions.rs  sync_types.rs  tpm_err_helpers.rs
src/crypto/: ct_cmp.rs  hash.rs  io_slices.rs  mod.rs  xor.rs
src/crypto/ecc/: ecdh.rs  ecdsa.rs  ecschnorr.rs  gen_random_scalar_impl.rs  key.rs  mod.rs
src/crypto/ecc/curve/: mod.rs  weierstrass_arithmetic_impl.rs
src/crypto/kdf/: mgf1.rs  mod.rs  tcg_tpm2_kdf_a.rs  tcg_tpm2_kdf_e.rs
src/crypto/rng/: chained.rs  hash_drbg.rs  mod.rs  x86_64_rdseed.rs
src/crypto/rsa/: crt_impl.rs  encrypt_impl.rs  es_pkcs1_v1_5.rs  key.rs  keygen_impl.rs  mod.rs  oaep.rs  pss.rs  ssa_pkcs1_v1_5.rs
src/crypto/symcipher/: ctr_impl.rs  mod.rs
src/nv/: alloc_bitmap.rs  auth_tree.rs  cache.rs  chip.rs  chunked_io_region.rs  error.rs  extents.rs  keys.rs  layout.rs  mod.rs
src/nv/test/: chip.rs  mod.rs
src/utils/: bitmanip.rs  cfg_zeroize.rs  mod.rs  try_new_helpers.rs
src/utils/asynchronous/: broadcast_future.rs  mod.rs  rwlock.rs  semaphore.rs
src/utils/asynchronous/test/: executor.rs  mod.rs
